--- a/Site Reserva.html
+++ b/Site Reserva.html
@@ -53,8 +53,8 @@
 	
 		<img id="imagem" src="https://st2.depositphotos.com/1001911/12400/v/380/depositphotos_124005594-stock-illustration-emoticon-with-rose-between-teeth.jpg" alt=""> 
 		<div id="texto">Vamos sair fim de semana?</div>
-		<button id="sim" class="botao" >Sim Gatão</button>
-		<button id="nao" class="botao">Não</button>
+		<button id="sim" class="botao">Sim Gatão</button>
+		<button id="nao" class="botao" onmouseover="moveButton();">Não</button>
 	 
 	
 	<div style="display:none" id="video" name="video" align="center">
